new default styling and colors

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,11 +3,13 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --stack: rgba(127, 127, 127, .25);
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+  --color-stack: var(--stack);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 }
@@ -20,7 +22,14 @@
 }
 
 body {
+  height: 100dvh;
+  margin: 0px;
+  padding: 0px;
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+::-webkit-scrollbar {
+  width: 0;
 }
